# pharmacy

./: .dockerignore  .gitignore  Cargo.toml  README.md  compose.yaml
client/: Dockerfile  astro.config.mjs  package.json
client/src/components/: Footer.astro  Location.astro  Navbar.astro  NavbarManager.astro  Order.astro  Products.astro  SelectBranch.astro
client/src/layouts/: Layout.astro
client/src/pages/: health.astro  index.astro  login.astro
client/src/pages/dev/: images.astro
client/src/pages/manager/: index.astro
client/src/pages/orders/: [id].astro
database/: 00_prepare.sql  01_tables.sql  02_logs.sql  03_functions.sql  04_triggers.sql  05_procedures.sql  06_views.sql  07_data.sql  11_roles.sql
database/data/: 00_prepare.sql  01_tables.sql  02_logs.sql  03_functions.sql  04_triggers.sql  05_procedures.sql  06_views.sql  07_roles.sql
database/master/: 11_replication.sql  12_data.sql
database/slave/: 11_replication.sql
nginx/: nginx.conf
services/branches/: Cargo.toml  Dockerfile
services/branches/src/: actions.rs  main.rs  models.rs  routes.rs  utils.rs
services/images/: Cargo.toml  Dockerfile
services/images/src/: actions.rs  main.rs  models.rs  routes.rs
services/libs/common/: Cargo.toml
services/libs/database/: Cargo.toml
services/libs/models/: Cargo.toml
services/libs/server/: Cargo.toml
services/products/: Cargo.toml  Dockerfile
services/products/src/: actions.rs  main.rs  models.rs  routes.rs  utils.rs
services/stocks/: Cargo.toml  Dockerfile
services/stocks/src/: actions.rs  main.rs  models.rs  routes.rs  utils.rs
(+28 files in other folders)
