[workspace]
resolver = "2"
members = ["services/branches", "services/libs/common", "services/libs/database", "services/products"]

# Dependencies for the project
[workspace.dependencies]
actix-cors = "0.7"
actix-web = "4.6"
chrono = { version = "0.4", features = ["serde"] }
deadpool-r2d2 = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-from-row = "0.5.2"
r2d2_postgres = "0.18"
rust_decimal = { version = "1.10", features = ["tokio-pg"] }
serde = { version = "1.0", features = ["derive"] }

# Local dependencies
common = { path = "./services/libs/common" }
database = { path = "./services/libs/database" }
